--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -46,7 +46,7 @@
       "desc": "As a pioneer of mobile app gamification, we take pride in originality and individuality, providing global players with state-of-the-art games that feature splendid storylines, sensational sound effects and magnificent animation that never cease to impress."
     },
     "partners": {
-      "title": "Partners",
+      "title": "Our Partners",
       "desc": "We have partnered with some of the biggest companies in the gaming industry to bring you the best experiences possible. We are proud of our partnerships and committed to delivering high-quality content to players."
     },
     "footer": {
