--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -22,7 +22,7 @@
         "user": "Người chơi",
         "game": "Trò chơi",
          "info": [
-      { "users": "Người chơi", "suffix": "M" },
+      { "users": "Người chơi", "suffix": "triệu" },
       { "games": "Trò chơi", "suffix": "" }
     ],
         "detail": [
